fix: improve spacing

--- a/.app/css/4-components/article.scss
+++ b/.app/css/4-components/article.scss
@@ -13,44 +13,43 @@
 }
 
 .article__content {
-  p {
-    margin-block-end: var(--space-4);
-    line-height: 1.45;
+  & > * + * {
+    margin-block-start: var(--flow-space, 1.5em);
+    margin-block-end: 0;
+  }
 
-    &:last-child {
-      margin-block-end: 0;
-    }
+  h1 + *,
+  h2 + *,
+  h3 + *,
+  h4 + *,
+  h5 + *,
+  h6 + * {
+    --flow-space: 0.5em;
+  }
+
+  pre {
+    // Overwrite prism styles
+    margin-block-start: var(--flow-space, 1.5em);
+    margin-block-end: 0;
+  }
+}
+
+.article__content {
+  p {
+    line-height: 1.45;
   }
 
   ul,
   ol {
-    margin-block: var(--space-4);
     padding-inline-start: var(--space-4);
   }
 
-  li > ul,
-  li > ol {
-    margin-block: var(--space-1);
-  }
-
   h1 {
-    margin-block-start: var(--space-6);
-    margin-block-end: var(--space-1);
     font-size: var(--font-size-2xl);
   }
 
   h2 {
-    margin-block-start: var(--space-6);
-    margin-block-end: var(--space-1);
     font-size: var(--font-size-xl);
-  }
-
-  h1 + h2,
-  h2 + h3,
-  h3 + h4,
-  h4 + h5,
-  h5 + h6 {
-    margin-block-start: var(--space-1);
   }
 
   h1,
@@ -72,7 +71,6 @@
 
   table {
     inline-size: 100%;
-    margin-block: var(--space-5);
     border-block-start: 1px solid var(--color-neutral-border);
     border-collapse: collapse;
   }
@@ -121,8 +119,6 @@
     word-break: normal;
     tab-size: 2;
     hyphens: none;
-    margin: 0;
-    margin-block-end: var(--space-4) !important;
     padding: 1em;
     border-radius: var(--rounded-lg);
     background-color: var(--color-neutral-bgSubtle);
@@ -144,12 +140,10 @@
   }
 
   .footnotes-sep {
-    margin-block: var(--space-6);
     border-style: solid;
     border-color: var(--color-neutral-line);
   }
 
-  /* Direct link */
   .direct-link {
     outline-offset: 4px;
     text-decoration: none;
